fix: don't center-align text

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ main {
 #account {
   width: 800px;
   margin: 0 auto;
-  text-align: center;
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 8px;
